fix: adjust object position for better image alignment in project card

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -316,6 +316,9 @@ h6 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  /* object-position: center center;   Default: center */
+  /* object-position: top center;   // Focus top */
+  object-position: 50% 60%;      
   z-index: 1;
 }
 
